<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_maps"
        android:title="@string/maps"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/postNewFragment"
        android:icon="@drawable/ic_capture"
        android:title="@string/add_story"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>
</menu>