...
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/img_logo"
        android:layout_alignParentEnd="true"
...
