...
           android:layout_height="52dp"
           android:background="@color/color_main"
           android:paddingHorizontal="16dp"
           android:gravity="center_vertical">

           <ImageView
               android:id="@+id/im_back"
               android:layout_width="32dp"
               android:layout_height="32dp"
               android:padding="4dp"
               android:src="@drawable/ic_arrow_back"
               android:background="@drawable/ripple_oval_primary_white"
               android:contentDescription="@string/back"/>
...
